tests/baselines/reference/numeric-separator-literal-dd-nsl-err.errors.txt
numeric-separator-literal-dd-nsl-err.ts(27,2): error TS6188: Numeric separators are not allowed here.


==== numeric-separator-literal-dd-nsl-err.ts (1 errors) ====
    // Copyright (C) 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not be the last digit character
    info: |
      NumericLiteralSeparator ::
        _
    
      DecimalLiteral ::
        DecimalIntegerLiteral . DecimalDigits_opt ExponentPart_opt
    
      DecimalDigits ::
        ...
        DecimalDigits NumericLiteralSeparator DecimalDigit
    
    negative:
      phase: parse
      type: SyntaxError
    
    features: [numeric-separator-literal]
    ---*/
    
    
    1_
     ~
!!! error TS6188: Numeric separators are not allowed here.
    